adding details page

--- a/ReactHook/src/components/Pokemon/Pokemon.css
+++ b/ReactHook/src/components/Pokemon/Pokemon.css
@@ -54,7 +54,7 @@
     width: 153px;
     height: 142px;
     margin-bottom: 10px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     transition: transform 0.3s ease;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
